# Kaggle_competion-Beyond-Visible-Spectrum-AI-for-Agriculture-2026

./: .gitignore  Readme.md  pyproject.toml  run.ipynb  run.py
notebooks/: pca+resnet.ipynb
outputs/: hs_pca.pkl
src/: config.py  models.py  optimize.py  stats.py  train.py  utils.py
