[project]
name = "kaggle-competion-beyond-visible-spectrum-ai-for-agriculture-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "kaggle>=1.8.3",
    "marimo>=0.19.7",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tifffile>=2026.1.28",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
